--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,14 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.0'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.1.0'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-migrationsupport', version: '5.1.0'
+
+    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.1.0'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.1.0'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.1.0'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.1.0'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-gradle-plugin', version: '1.1.0'
 }
