Home work #1 is done:   - calculator named as CalcWithSeparateMethods.java in main > Hometasks folder;   - tests for it in tests > Hometasks folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
-/HomeTask0.iml
-/gradlew
-/gradlew.bat
-/.idea/
+out
+.idea
+.idea/workspace.xml
+.logs
+*.iml
+build
+.gradle
+gradle
+gradlew*
